// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutcomeSummaryBar failure only 1`] = `
<div
  className="outcome-summary-bar"
>
  <div
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <span
      className="fail"
    >
      <CrossIconInverted />
       
      3
       
      <span
        className="outcome-past-tense"
      >
        Failed
      </span>
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <span
      className="pass"
    >
      <CheckIconInverted />
       
      0
       
      <span
        className="outcome-past-tense"
      >
        Passed
      </span>
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <span
      className="inapplicable"
    >
      <InapplicableIconInverted />
       
      0
       
      <span
        className="outcome-past-tense"
      >
        Not applicable
      </span>
    </span>
  </div>
</div>
`;

exports[`OutcomeSummaryBar failures + not applicable + passes 1`] = `
<div
  className="outcome-summary-bar"
>
  <div
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <span
      className="fail"
    >
      <CrossIconInverted />
       
      3
       
      <span
        className="outcome-past-tense"
      >
        Failed
      </span>
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 2,
      }
    }
  >
    <span
      className="pass"
    >
      <CheckIconInverted />
       
      2
       
      <span
        className="outcome-past-tense"
      >
        Passed
      </span>
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <span
      className="inapplicable"
    >
      <InapplicableIconInverted />
       
      3
       
      <span
        className="outcome-past-tense"
      >
        Not applicable
      </span>
    </span>
  </div>
</div>
`;

exports[`OutcomeSummaryBar failures + not applicable only 1`] = `
<div
  className="outcome-summary-bar"
>
  <div
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <span
      className="fail"
    >
      <CrossIconInverted />
       
      3
       
      <span
        className="outcome-past-tense"
      >
        Failed
      </span>
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <span
      className="pass"
    >
      <CheckIconInverted />
       
      0
       
      <span
        className="outcome-past-tense"
      >
        Passed
      </span>
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <span
      className="inapplicable"
    >
      <InapplicableIconInverted />
       
      3
       
      <span
        className="outcome-past-tense"
      >
        Not applicable
      </span>
    </span>
  </div>
</div>
`;

exports[`OutcomeSummaryBar failures + passes only 1`] = `
<div
  className="outcome-summary-bar"
>
  <div
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <span
      className="fail"
    >
      <CrossIconInverted />
       
      3
       
      <span
        className="outcome-past-tense"
      >
        Failed
      </span>
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 2,
      }
    }
  >
    <span
      className="pass"
    >
      <CheckIconInverted />
       
      2
       
      <span
        className="outcome-past-tense"
      >
        Passed
      </span>
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <span
      className="inapplicable"
    >
      <InapplicableIconInverted />
       
      0
       
      <span
        className="outcome-past-tense"
      >
        Not applicable
      </span>
    </span>
  </div>
</div>
`;

exports[`OutcomeSummaryBar not applicable + passes only 1`] = `
<div
  className="outcome-summary-bar"
>
  <div
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <span
      className="fail"
    >
      <CrossIconInverted />
       
      0
       
      <span
        className="outcome-past-tense"
      >
        Failed
      </span>
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 2,
      }
    }
  >
    <span
      className="pass"
    >
      <CheckIconInverted />
       
      2
       
      <span
        className="outcome-past-tense"
      >
        Passed
      </span>
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 3,
      }
    }
  >
    <span
      className="inapplicable"
    >
      <InapplicableIconInverted />
       
      3
       
      <span
        className="outcome-past-tense"
      >
        Not applicable
      </span>
    </span>
  </div>
</div>
`;

exports[`OutcomeSummaryBar not applicable only 1`] = `
<div
  className="outcome-summary-bar"
>
  <div
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <span
      className="fail"
    >
      <CrossIconInverted />
       
      0
       
      <span
        className="outcome-past-tense"
      >
        Failed
      </span>
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 2,
      }
    }
  >
    <span
      className="pass"
    >
      <CheckIconInverted />
       
      2
       
      <span
        className="outcome-past-tense"
      >
        Passed
      </span>
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <span
      className="inapplicable"
    >
      <InapplicableIconInverted />
       
      0
       
      <span
        className="outcome-past-tense"
      >
        Not applicable
      </span>
    </span>
  </div>
</div>
`;

exports[`OutcomeSummaryBar passes only 1`] = `
<div
  className="outcome-summary-bar"
>
  <div
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <span
      className="fail"
    >
      <CrossIconInverted />
       
      0
       
      <span
        className="outcome-past-tense"
      >
        Failed
      </span>
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 2,
      }
    }
  >
    <span
      className="pass"
    >
      <CheckIconInverted />
       
      2
       
      <span
        className="outcome-past-tense"
      >
        Passed
      </span>
    </span>
  </div>
  <div
    style={
      Object {
        "flexGrow": 0,
      }
    }
  >
    <span
      className="inapplicable"
    >
      <InapplicableIconInverted />
       
      0
       
      <span
        className="outcome-past-tense"
      >
        Not applicable
      </span>
    </span>
  </div>
</div>
`;
